# INFaaS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  shutdown_infaas.sh  start_infaas.sh
cmake/: Findhiredis.cmake  Findlibev.cmake  GRPCGenerateCPP.cmake
dockerfiles/: Dockerfile.gnmt-nvpy  Dockerfile.neuron-rtd  Dockerfile.tf-python  PyTorchDocker  README.md
docs/: README.md
docs/_layouts/: default.html
protos/: CMakeLists.txt  modelreg.proto  queryfe.proto  request_reply.proto
protos/internal/: CMakeLists.txt  infaas_request_status.proto  infaas_request_status_pb2.py  python_codegen.py  query.proto  query_pb2.py  sys_monitor.proto
protos/trtis/: CMakeLists.txt  grpc_service.proto
scripts/: install_aws_cpp_sdk.sh  install_cmake.sh  install_deps_aws.sh  install_docker.sh  install_grpc.sh  setup.sh  start_vm.sh
src/: CMakeLists.txt
src/cli-tools/: CMakeLists.txt  infaas_modarch.cc  infaas_modelregistration.cc  infaas_modinfo.cc  infaas_offline_query.cc  infaas_online_query.cc
src/containers/: container_start.sh  pytorch_container.py
src/containers/gnmt-nvpy/: gnmt_container.py
src/containers/gnmt-nvpy/seq2seq/models/: encoder.py
src/containers/inferentia/: .gitignore  compile_resnet50.py  example_run.sh  infer_resnet50.py  neuron_container.py  query_pb2_grpc.py
src/include/: base64.h  constants.h.templ
src/master/: CMakeLists.txt  master_vm_daemon.cc  modelreg_client.cc  modelreg_client.h  modelreg_heartbeat.cc  modelreg_server.cc  queryfe_client.cc  queryfe_client.h  queryfe_heartbeat.cc  queryfe_server.cc
src/metadata-store/: CMakeLists.txt  redis-serv.conf  redis-test.conf  redis_md_test.cc  redis_metadata.cc  redis_metadata.h  redis_startup_helper.cc  run_redis_test.sh
src/profiler/: batching_parameters.txt  img_to_base64.py  model_profile.config.template  neuron_container.py  nlp_query.py  profile_model.sh  pytorch_query.py
src/worker/: CMakeLists.txt  autoscaler.cc  autoscaler.h  batching_parameters.txt  common_model_util.cc  common_model_util.h  gnmt_query_test.cc  gpu_daemon.cc  inferentia_query_test.cc  query_client.cc  query_client.h  query_executor.cc  query_heartbeat.cc  query_test.cc  start_worker.sh  stop_worker.sh  trtis_model_config.cc  trtis_model_config.h  trtis_perf_client.cc  trtis_request.cc  trtis_request.h  trtis_simple_client.cc
